# data-graph-studio

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DASHBOARD-profile-comparison.md  DASHBOARD.md  DASHBOARD_WIZARD.md  PRD-profile-comparison.md  PRD-refactor-god-objects.md  PRD-undo-redo-and-windows-release.md  PRD-v0.21.md  PRD-v2-features.md  PRD.md  PRD_COMPARE_TOOLBAR.md  PRD_LOGGER_WIZARD.md  PRD_PROJECT_WIZARD.md  PRD_SPOTFIRE_UPGRADE.md  PRD_TABLE_ENHANCEMENT.md  PRD_data_tab_redesign.md  PRD_v0.16.md  PRD_v2.md  PRD_v3.md  PREMORTEM-undo-redo-and-windows-release.md  README.md  RESEARCH_WIZARD.md  REVIEW-undo-redo-and-windows-release.md  REVIEW_LOG-profile-comparison.md  REVIEW_LOG-v2-features.md  REVIEW_LOG.md  REVIEW_LOG_COMPARE_TOOLBAR.md  REVIEW_LOG_WIZARD.md  REVIEW_LOG_v0.16.md  REVIEW_PROJECT_EXPLORER.md  REVIEW_STREAMING_DASHBOARD.md  WORKFLOW.md  check_menus.py  dgs.spec  dgs_client.py  generate_full_report.py  (+19 more)
data_graph_studio/: __init__.py  __main__.py  _build_version.py  api.py  api_server.py  cli.py
docs/: PRD_External_Integration.md  PRD_Graph_Profiles.md  PRD_Multi_Data_Comparison.md  PRD_Report_Generation.md  bug-test-matrix.md  changelog-manual-mapping-priority.md  changelog-test-index.md  perfetto-trace-tools.md
scripts/: convert_merged_perfetto_csv_to_systrace_txt.py  generate_changelog_test_index.py  generate_release_notes.py  merge_perfetto_ptftrace_to_csv.py  merge_perfetto_ptftrace_to_systrace_txt.py
src/: cli.py
test_data/: 01_sales_simple.csv  02_stock_ohlc.csv  03_sensors_timeseries.csv  04_employees.csv  05_products_inventory.csv  06_website_analytics.csv  07_survey_results.csv  test_pipe.txt  (+7 more)
(+511 files in other folders)
