[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
qt_api = "pyside6"
markers = [
  "qt: headless Qt smoke tests (widget construction)",
]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"data_graph_studio/core/comparison_manager.py" = ["E501"]
"data_graph_studio/core/dataset_manager.py" = ["E501"]
"data_graph_studio/report/html_generator.py" = ["E501"]
