[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
qt_api = "pyside6"
markers = [
  "qt: headless Qt smoke tests (widget construction)",
]


[tool.ruff]
exclude = [".worktrees", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_blocklayer_converter.py" = ["E501"]
"tests/test_ui_panels.py" = ["E402"]
